- Fixed deprecated code